--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "homepage": "https://moeezally.github.io",
   "scripts": {
     "build": "react-scripts --openssl-legacy-provider build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts --openssl-legacy-provider start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "deploy": "./deploy.sh"
   },
   "dependencies": {
     "apollo-boost": "^0.4.4",
